# ShaderShaker

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: main.yml
cmake/: FindANTLR.cmake
contrib/antlr/: antlr3memory.hpp
contrib/catch/: catch.hpp
emscripten/: binding.cpp
src/: CMakeLists.txt
src/ast/: CMakeLists.txt  annotation_node.cpp  annotation_node.h  assignment_operator.h  const_visitor.h  empty_visitor.h  expression_node.cpp  expression_node.h  function_node.cpp  function_node.h  node.cpp  node.h  print_visitor.cpp  print_visitor.h  statement_node.cpp  statement_node.h  technique_node.cpp  technique_node.h  tree_traverser.cpp  tree_traverser.h  visitor.h  visitor_base.h  visitor_item_separator.h
src/ast/printer/: annotation_printer.cpp  annotation_printer.h  hlsl_printer.cpp  hlsl_printer.h  xlsl_printer.cpp  xlsl_printer.h
src/base/: CMakeLists.txt  console_error_handler.cpp  console_error_handler.h  error_handler_interface.h  object.cpp  object.h  object_ref.h  text_error_handler.cpp  text_error_handler.h
src/generation/: CMakeLists.txt  code_generator.cpp  code_generator.h  fragment_definition.cpp  fragment_definition.h  function_definition.cpp  function_definition.h  graph.cpp  graph.h  graph_node.cpp  graph_node.h  graph_printer.cpp  graph_printer.h  graph_validator.cpp  graph_validator.h  semantic_remover.cpp  semantic_remover.h  technique_generator.cpp  technique_generator.h
src/hlsl_parser/: CMakeLists.txt  HLSL.g4  hlsl.cpp  hlsl.h  hlsl_traits.cpp  hlsl_traits.h
src/utils/: CMakeLists.txt  indentation.cpp  indentation.h
test/src/: CMakeLists.txt
test/src/ast/: CMakeLists.txt
(+16 files in other folders)
